@@ -1,13 +1,14 @@
 This file documents the revision history for mod_gearman.
 
 1.0    Sun...
+          - added dup_server option (Mark Clarkson)
           - added stderr to send_multi
           - added missing performance data to send_multi
           - added error message when using unknown option
           - fixed handling of unusual exit codes
 
 0.9    Sun Jan 16 21:20:06 CET 2011
-          - prepared debian packaging (thanks Stig Sandbeck Mathisen)
+          - prepared debian packaging (Stig Sandbeck Mathisen)
           - increased max output to 64k
           - fixed default paths in gearmand init script
           - fixed problem with too low number of workers after running for a while
